A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Hungarian, Italian, Polish, Slovak and Russian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5644] fixed triggers with spaces in the expression missing from the graph legend (Oleg)
........S. [ZBX-5652] fixed resolving of a {ITEM.NAME} macro in notification messages (Sasha)
........S. [ZBX-5454] fixed encoding of long email subject line as required by RFC-2047; thanks to Jairo Eduardo Lopez Fuentes Nacarino (Andris)
A.F....... [ZBX-3920] added check for dependencies duplicates (Oleg)
..F....... [ZBX-5636] fixed empty acknowledge block in event details if event has no acknowledges (Vedmak)
...G...... [ZBX-5571] fixed reporting of system.sw.packages for multiple package systems (Andris)
...G...... [ZBX-5559] fixed reporting of system.sw.packages with short package listing (Andris)
..F....... [ZBX-5280] fixed functional macros for newly created items returning 0 instead of 'no data' (Toms)
..F....... [ZBX-5280] fixed HOST.DNS macro priorities if only JMX and IPMI interfaces are used in host (Toms)
..F....... [ZBX-5280] fixed HOST.DNS macro did not used default DNS from host interface configuration (Toms)
..F....... [ZBX-5280] fixed in map labels not expanding positional macros like HOST.HOST1 for trigger items (Toms)
A......... [ZBX-4097] changed the "application", "host" and "group" parameters for item.get, trigger.get and triggerprototype.get to be case sensitive (Pavels)
A.F....... [ZBX-1946] fixed being able to create screen items with spans exceeding the size of the screen (Pavels)
A.F....... [ZBX-5619] Fixed errors when importing a template with an empty screen (Oleg)
..F....... [ZBX-3803] added session auto start check in frontend setup (Oleg)