@@ -170,6 +170,12 @@ abstract class CItemGeneral extends CZBXAPI {
 				self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect arguments passed to function.'));
 			}
 
+			// check for "templateid", because it is not allowed
+			if (isset($item['templateid'])) {
+				self::exception(ZBX_API_ERROR_PARAMETERS, _('Cannot set "templateid" for item.'));
+			}
+
+
 			if ($update) {
 				if (!isset($dbItems[$item['itemid']])) {
 					self::exception(ZBX_API_ERROR_PARAMETERS, _('No permissions to referred object or it does not exist!'));
