@@ -38,6 +38,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+A......... [ZBX-5648] changes don't allow update "templateid" in items, or create new item with predefined "templateid"  (Oleg)
 ..F....... [ZBX-5644] fixed triggers with spaces in the expression missing from the graph legend (Oleg)
 ........S. [ZBX-5652] fixed resolving of a {ITEM.NAME} macro in notification messages (Sasha)
 ........S. [ZBX-5454] fixed encoding of long email subject line as required by RFC-2047; thanks to Jairo Eduardo Lopez Fuentes Nacarino (Andris)
